# dxf2kml

./: .gitignore  BADGES.md  CONTRIBUTING.md  GITHUB_READY.md  GITHUB_RELEASE_CHECKLIST.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  README.md  README_EN.md  ci-cd.yml.tmp  create_examples.py  dwg2kml.py  dwg2kml_gui.py  install.bat  install.sh  onekeystart.bat  pyproject.toml  requirements.txt  test_gui.bat  test_language.bat  upload-to-github.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
docs/guides/: CGCS2000 指南.md  功能完成总结.md  功能说明.md  帮助功能双语完成.md  开发者信息.md  开源准备完成.md  快速使用指南.md  日志双语修复完成.md  语言切换修复完成.md  项目总结.md
examples/: README.md  sample_basic.dxf  sample_grid.dxf
