[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dxf2kml"
version = "1.0.0"
authors = [
    {name = "Wang Ningping", email = "174367449@qq.com"},
]
description = "Convert DXF files to KML format with CGCS2000 support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
keywords = ["DXF", "KML", "CAD", "GIS", "CGCS2000", "Google Earth", "conversion"]
dependencies = [
    "ezdxf>=1.0.0",
    "simplekml>=1.3.6",
    "pyproj>=3.0.0",
]

[project.optional-dependencies]
gui = [
    "tk>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/wangningping/dxf2kml"
Repository = "https://github.com/wangningping/dxf2kml.git"
Issues = "https://github.com/wangningping/dxf2kml/issues"
Documentation = "https://github.com/wangningping/dxf2kml#readme"

[project.scripts]
dxf2kml = "dxf2kml:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
